# breakout-1

./: Ball.cpp  Ball.h  Brick.h  CMakeLists.txt  Paddle.cpp  Paddle.h  config.json  game.cpp  game.h  main.cpp
tests/: CMakeLists.txt  test_collision.cpp
